--- a/cl.ipynb
+++ b/cl.ipynb
@@ -111,7 +111,7 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "import numpy as np\n",
-    "data = np.loadtxt(\"./wine_data/winequality-red.csv\",delimiter=\",\")\n",
+    "data = np.loadtxt(\"datasets/winequality-red.csv\",delimiter=\",\")\n",
     "print(data.shape)"
    ]
   },
