finalize the tut4

--- a/t5_try.ipynb
+++ b/t5_try.ipynb
@@ -326,7 +326,9 @@
    ],
    "source": [
     "train_hist = model.fit(x_train, y_train_onehot, batch_size=100,\n",
-    "        epochs=35,verbose=1, validation_data=(x_test, y_test_onehot), shuffle=True)"
+    "        epochs=35,verbose=1, validation_data=(x_test, y_test_onehot), shuffle=True)\n",
+    "# final decision is the 8 layers, no drop, batch size 128, learning rate is the 0.0001, 288 per layer\n",
+    "# add tf.keras.layers.BatchNormalization()"
    ]
   },
   {
