--- a/uns.ipynb
+++ b/uns.ipynb
@@ -1143,8 +1143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "probably not, since we just try by hand, not using formal way like grid search to really see what is the best model, and maybe the cross validation (5-fold etc.) will be used<br>\n",
-    "also the mse here is for whole data, we what split them and let it see the unknown rating prediction performance"
+    "the performance here compares no value(rating 0) often, so the mse is meaningless. We want to split it up, and compare real value to pred to see perfomance"
    ]
   },
   {
@@ -1411,7 +1410,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1425,7 +1424,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f7c184107aed90e61f21a107d83f6d0078a177071f5a0db3f42787e18d37abad"
+   }
   }
  },
  "nbformat": 4,
