--- a/nn.ipynb
+++ b/nn.ipynb
@@ -963,11 +963,11 @@
     }
    },
    "source": [
-    "batch_size: [25, 50, 100, 200]  similiar, but 25, 50 are not good, and much slow of course<br>\n",
+    "batch_size: [25, 50, 100, 200] or [64, 128]  similiar, but 25, 50 are not good, and much slow of course<br>\n",
     "learning_rate: [0.001, 0.0001] smaller will be good <br>\n",
     "layers: [4, 6, 8], more will be better <br>\n",
-    "node per layer: [100, 192, 256], more will be better <br><br>\n",
-    "final choice: bs 100, 256*8, 0.0001 learning rate, 60%+ accuracy, and 52% val_accuracy can be reached"
+    "node per layer: [100, 192, 256, 288], more will be better <br><br>\n",
+    "final choice: bs 128, 288*8, 0.0001 learning rate, 66%+ accuracy, and 52% val_accuracy can be reached in 25 epochs"
    ]
   },
   {
