--- a/nn.ipynb
+++ b/nn.ipynb
@@ -1177,6 +1177,12 @@
    "outputs": [],
    "source": [
     "import pickle\n",
+    "\n",
+    "# dictionary_data = alltest\n",
+    "# a_file = open(\"data.pkl\", \"wb\")\n",
+    "# pickle.dump(dictionary_data, a_file)\n",
+    "# a_file.close()\n",
+    "\n",
     "a_file = open(\"Stored_data/nn_test.pkl\", \"rb\")\n",
     "alltest = pickle.load(a_file)\n",
     "a_file.close()"
