--- a/sa.ipynb
+++ b/sa.ipynb
@@ -318,7 +318,7 @@
       "outputs": [],
       "source": [
         "train_dataset = train_data.shuffle(BUFFER_SIZE).batch(BATCH_SIZE).prefetch(tf.data.AUTOTUNE)\n",
-        "valid_dataset = valid_data.shuffle(BUFFER_SIZE).batch(BATCH_SIZE).prefetch(tf.data.AUTOTUNE)\n",
+        "valid_dataset = valid_data.batch(BATCH_SIZE).prefetch(tf.data.AUTOTUNE)\n",
         "test_dataset = test_dataset.batch(BATCH_SIZE).prefetch(tf.data.AUTOTUNE)"
       ]
     },
